# segway_t09

segway_ws/: ___All_Errors.txt
segway_ws/__segway_ws/rospy_package/: CATKIN_IGNORE_Error.txt
segway_ws/__segway_ws/segwayrmp/: CATKIN_IGNORE_Error.txt
segway_ws/segway_ws/: 401ChassisInit.sh  README.md  build_autoware.sh  build_package.sh  run_segway_actuator.sh  send_actuator_cmd.py
segway_ws/segway_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
segway_ws/segway_ws/install/segway_msgs/include/segway_msgs/segway_msgs/msg/: chassis_ctrl_src_fb.h  chassis_mileage_meter_fb.h  chassis_mode_fb.h  chassis_mode_fb.hpp  error_code_fb.hpp  motor_work_mode_fb.hpp  ticks_fb.h
segway_ws/segway_ws/install/segway_msgs/include/segway_msgs/segway_msgs/msg/detail/: bms_fb__rosidl_typesupport_introspection_cpp.hpp  bms_fb__struct.hpp  bms_fb__type_support.c  bms_fb__type_support.h  chassis_ctrl_src_fb__builder.hpp  chassis_ctrl_src_fb__rosidl_typesupport_fastrtps_c.h  chassis_ctrl_src_fb__rosidl_typesupport_introspection_c.h  chassis_ctrl_src_fb__struct.h  chassis_ctrl_src_fb__struct.hpp  chassis_ctrl_src_fb__traits.hpp  chassis_ctrl_src_fb__type_support.h  chassis_mileage_meter_fb__functions.c  chassis_mileage_meter_fb__rosidl_typesupport_fastrtps_c.h  chassis_mileage_meter_fb__rosidl_typesupport_fastrtps_cpp.hpp  chassis_mileage_meter_fb__rosidl_typesupport_introspection_c.h  chassis_mileage_meter_fb__struct.h  chassis_mileage_meter_fb__struct.hpp  chassis_mileage_meter_fb__traits.hpp  (+38 more)
segway_ws/segway_ws/install/segway_msgs/share/ament_index/resource_index/package_run_dependencies/: segway_msgs
segway_ws/segway_ws/install/segway_msgs/share/ament_index/resource_index/rosidl_interfaces/: segway_msgs
segway_ws/segway_ws/install/segway_msgs/share/segway_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
segway_ws/segway_ws/install/segway_msgs/share/segway_msgs/cmake/: export_segway_msgs__rosidl_generator_cExport.cmake  export_segway_msgs__rosidl_generator_cppExport.cmake  export_segway_msgs__rosidl_generator_pyExport-release.cmake  export_segway_msgs__rosidl_generator_pyExport.cmake  export_segway_msgs__rosidl_typesupport_fastrtps_cppExport-release.cmake  segway_msgs__rosidl_typesupport_cExport-release.cmake  segway_msgs__rosidl_typesupport_introspection_cExport-release.cmake  segway_msgs__rosidl_typesupport_introspection_cExport.cmake
segway_ws/segway_ws/install/segway_msgs/share/segway_msgs/msg/: ErrorCodeFb.idl  TicksFb.idl
segway_ws/segway_ws/install/segway_msgs/share/segway_msgs/srv/: ChassisSendEvent_Response.msg  RosClearChassisErrorCodeCmd_Response.msg  RosGetChassisRotateSwitchCmd.idl  RosGetChassisRotateSwitchCmd_Request.msg  RosGetChassisSnCmd_Request.msg  RosGetHostAndChassisMatchCmd.idl  RosGetLoadParamCmd.idl  RosGetLoadParamCmd_Request.msg  RosGetRotateFunctionCfgCmd.idl  RosGetVelMaxFeedbackCmd_Response.msg  RosResetHostPowerCmd_Response.msg  RosSetCfgRotateFunctionCmd.idl  RosSetCfgRotateFunctionCmd_Request.msg  RosSetChassisBuzzerCmd.idl  RosSetChassisBuzzerCmd_Response.msg  RosSetChassisEnableCmd.idl  RosSetChassisPoweroffCmd.idl  RosSetChassisPoweroffCmd_Response.msg  RosSetLoadParamCmd_Response.msg  RosStartChassisLeftRotateCmd_Request.msg  RosStopChassisRotateCmd_Response.msg
segway_ws/segway_ws/install/segway_ros2/lib/segway_ros2/: drive_sample
segway_ws/segway_ws/install/segway_ros2/share/ament_index/resource_index/package_run_dependencies/: segway_ros2
segway_ws/segway_ws/install/segway_ros2/share/ament_index/resource_index/parent_prefix_path/: segway_ros2
segway_ws/segway_ws/install/segway_ros2/share/segway_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
segway_ws/segway_ws/install/segway_ros2/share/segway_ros2/cmake/: segway_ros2Config-version.cmake  segway_ros2Config.cmake
segway_ws/segway_ws/install/segway_ros2/share/segway_ros2/environment/: ament_prefix_path.dsv  path.dsv
segway_ws/segway_ws/log/: latest_build
segway_ws/segway_ws/src/segway_msgs/: CMakeLists.txt  package.xml
segway_ws/segway_ws/src/segway_msgs/srv/: RosGetChassisSnCmd.srv
segway_ws/segway_ws/src/segway_ros2/: CMakeLists.txt
segway_ws/segway_ws/src/segway_ros2/include/: Ge_encoder_odometry.h
segway_ws/segway_ws/src/segway_ros2/include/segway_ros2/: drive_segway_sample.hpp
segway_ws/segway_ws/src/segway_ros2/src/: drive_segway_sample.cpp
(+95 files in other folders)
